--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,13 @@ python:
     - "3.4"
     - "3.5"
     - "3.6"
+    - "3.7"
     - "nightly"
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
 before_script:
     - (cd test/commonmark && ./spec.sh)
 script:
